vlib/v/checker/tests/implements_keyword.vv
interface MyError {
	print_error()
}

struct CustomError implements MyError {
}

fn (e CustomError) print_error2() {
}
